# pathfinder_ws

./: .gitignore
src/pathfinder_bringup/: CMakeLists.txt  package.xml
src/pathfinder_bringup/launch/: simulated_robot.launch.py
src/pathfinder_controller/: CMakeLists.txt  package.xml
src/pathfinder_controller/config/: pathfinder_controllers.yaml
src/pathfinder_controller/launch/: controller.launch.py  joystick_teleop.launch.py
src/pathfinder_controller/pathfinder_controller/: noisy_controller.py  simple_controller.py  twist_relay.py
src/pathfinder_description/: CMakeLists.txt  package.xml
src/pathfinder_description/launch/: display.launch.py  gazebo.launch.py
src/pathfinder_description/urdf/: pathfinder.urdf.xacro  pathfinder_gazebo.xacro  pathfinder_ros2_control.xacro
src/pathfinder_description/worlds/: small_house.world  small_warehouse.world
src/pathfinder_localization/: CMakeLists.txt  package.xml
src/pathfinder_localization/config/: amcl.yaml  ekf.yaml
src/pathfinder_localization/launch/: global_localization.launch.py  local_localization.launch.py
src/pathfinder_localization/pathfinder_localization/: kalman_filter.py  odometry_motion_model.py
src/pathfinder_mapping/: CMakeLists.txt  package.xml
src/pathfinder_mapping/launch/: slam.launch.py
src/pathfinder_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
src/pathfinder_motion/include/pathfinder_motion/: pd_motion_planner.hpp  pure_pursuit.hpp
src/pathfinder_motion/src/: pd_motion_planner.cpp  pure_pursuit.cpp
src/pathfinder_msgs/: CMakeLists.txt  package.xml
src/pathfinder_navigation/: CMakeLists.txt  package.xml
src/pathfinder_navigation/behavior_tree/: simple_navigation_w_replanning_and_recovery.xml
src/pathfinder_navigation/config/: bt_navigator.yaml  controller_server.yaml  planner_server.yaml
src/pathfinder_navigation/launch/: navigation.launch.py
src/pathfinder_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/pathfinder_planning/include/pathfinder_planning/: a_star_planner.hpp  dijkstra_planner.hpp
src/pathfinder_planning/src/: a_star_planner.cpp  dijkstra_planner.cpp
